tests/snapshots/wire_snapshots__snapshot_request_execute.snap
---
source: tests/wire_snapshots.rs
expression: r
---
{
  "type": "execute",
  "id": "test",
  "cont_id": "stmt-7",
  "parameters": [
    "hello"
  ]
}
