tests/snapshots/wire_snapshots__snapshot_request_prepare_sql.snap
---
source: tests/wire_snapshots.rs
expression: r
---
{
  "type": "prepare_sql",
  "id": "test",
  "sql": "SELECT * FROM T WHERE ID=?"
}
