tests/snapshots/wire_snapshots__snapshot_request_prepare_sql_execute_single.snap
---
source: tests/wire_snapshots.rs
expression: r
---
{
  "type": "prepare_sql_execute",
  "id": "test",
  "sql": "VALUES (CAST(? AS INTEGER))",
  "parameters": [
    7
  ],
  "rows": 100
}
