tests/snapshots/wire_snapshots__snapshot_request_sql_minimal.snap
---
source: tests/wire_snapshots.rs
expression: r
---
{
  "type": "sql",
  "id": "test",
  "sql": "SELECT 1 FROM SYSIBM.SYSDUMMY1"
}
