tests/snapshots/wire_snapshots__snapshot_request_sql_terse.snap
---
source: tests/wire_snapshots.rs
expression: r
---
{
  "type": "sql",
  "id": "test",
  "sql": "SELECT EMPNO, LASTNAME FROM EMPLOYEE",
  "rows": 5,
  "terse": true
}
