tests/snapshots/wire_snapshots__snapshot_request_sql_with_params_and_rows.snap
---
source: tests/wire_snapshots.rs
expression: r
---
{
  "type": "sql",
  "id": "test",
  "sql": "SELECT * FROM T WHERE ID=?",
  "rows": 50,
  "parameters": [
    42
  ]
}
