tests/snapshots/wire_snapshots__snapshot_response_cl_result.snap
---
source: tests/wire_snapshots.rs
expression: r
---
{
  "type": "cl_result",
  "id": "test",
  "success": true,
  "messages": [
    {
      "id": "CPF1234",
      "type": "INFO",
      "text": "ok"
    }
  ]
}
