tests/snapshots/wire_snapshots__snapshot_response_config_set.snap
---
source: tests/wire_snapshots.rs
assertion_line: 271
expression: r
---
{
  "type": "config_set",
  "id": "test",
  "success": true
}
