tests/snapshots/wire_snapshots__snapshot_response_dove_result.snap
---
source: tests/wire_snapshots.rs
assertion_line: 450
expression: r
---
{
  "type": "dove_result",
  "id": "test",
  "success": true,
  "vedata": {
    "estimated_rows": 1000,
    "operator": "TableScan",
    "table": "ORDERS"
  }
}
